# Software25-26

./: .gitignore  .gitmodules  AIRBRAKE_REFERENCE.md  FAILSAFES.md  README.md  UMBILICAL_REFERENCE.md  flake.nix
.github/: copilot-instructions.md
.github/workflows/: nix.yml
BLIMS/: BLIMS_REFERENCE.md  Cargo.toml  L3_Launch4_2025.csv  README.md  blims_config.json  build.rs  memory.x  odrive_config.json  sim_output.csv
BLIMS/.cargo/: config.toml
BLIMS/examples/: motor_test.rs
BLIMS/examples/blims_car_test/: car_test.rs  car_test_visualizer.py  descent_alt_data.rs  serial_splitter.py
BLIMS/sim/: L3_Launch4_2025.csv  csvreader.py  sim.rs
BLIMS/src/: blims.rs  blims_constants.rs  blims_state.rs  lib.rs  main.rs  sim.rs  sim_data.rs
BLIMS/tests/: simpleMotorTest.rs
BLIMS/tests/simple_motor_test/: Cargo.toml
BLIMS/tests/simple_motor_test/src/: main.rs
Ground_Station_UI/: .gitignore  BUG_REPORT.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
Ground_Station_UI/scripts/: download_tiles.py
Ground_Station_UI/src/: App.tsx  LandingPage.tsx  PropulsionPage.tsx  RecoveryPage.tsx
Ground_Station_UI/src/components/: ButtonComponent.tsx  ButtonPanelComponent.tsx  ConfirmationOverlayComponent.tsx  FillButtonComponent.tsx  FillComponent.tsx  HeaderComponent.tsx  HeaterPanelComponent.tsx  TargetMapComponent.tsx  VentButtonComponent.tsx
RATS/: SystemDoc.md
RATS/Common/: config.h  packet_parser.cpp  packet_parser.h  packet_types.h  serial_protocol.h
RATS/RadioPico/: CMakeLists.txt  RadioPico.cpp  hw_config.c  inter_pico_uart.cpp  inter_pico_uart.h  lwipopts.h  mqtt_client.cpp  mqtt_client.h  rfd900x_uart.cpp  rfd900x_uart.h  sd_logger.cpp  sd_logger.h
RATS/StepperPico/: Arduino.h  AzEl.h  CMakeLists.txt  GeoMath.cpp  GeoMath.h  KalmanCV.cpp  NMEAParser.cpp  NMEAParser.h  StepperMotor.cpp  StepperMotor.h  StepperPico.ino  config.h  main.cpp  packet_simulator.cpp  packet_simulator.h  packet_types.h
RATS/StepperPico/include/: GeoMath.h  KalmanCV.h  LLA.h  StepperMotor.h
RATS/StepperPico/src/: GeoMath.cpp  KalmanCV.cpp  StepperMotor.cpp  StepperPico.cpp  main.cpp
RATS/Tests/: CMakeLists.txt  mqtt_test.cpp  packet_simulator.cpp  packet_simulator.h
RATS/Tests/MotorPicoTest/: MotorPico.py  RadioPico.py  SDTest.py
air-brake-controls/: .gitignore
air-brake-controls/controller_in_rust_v2/: Cargo.toml
air-brake-controls/controller_in_rust_v2/src/: airbrakes.rs  controller.rs  gyro_calibration.rs  lib.rs  main.rs  measure_tilt.rs  rocket_sim.rs
air-brake-controls/controller_in_rust_v2/tests/: test_airbrakes.rs
air-brake-controls/controller_in_rust_v3/: Cargo.toml
air-brake-controls/controller_in_rust_v3/dashboard/: app.js  index.html  server.py  style.css
air-brake-controls/controller_in_rust_v3/examples/: closed_loop_sim.rs  sim.rs  sim_data.rs
air-brake-controls/controller_in_rust_v3/src/: airbrakes.rs  apogee.rs  constants.rs  control.rs  lib.rs  tilt.rs  types.rs  velocity.rs
fill-station/: CMakeLists.txt  Cargo.toml  DEVICETREE.md  MOCK_SERVER_SETUP.md  README.md  command.proto  flake.nix  out.txt  out_original.txt  sd-image.nix  test_adc_stream.py  test_valves.py  uboot-a53.nix
fill-station/.cargo/: config.toml
fill-station/client/: dashboard.py  dashboard_v2.py  mock_server.py  requirements.txt  test_mock.py
fill-station/client_env/: pyvenv.cfg
fill-station/docs/: ADC_MONITOR_GUIDE.md  ADC_STREAMING.md  ADDING_FEATURES.md  CSV_LOGGING.md  DTBO_BUILDER.md  INDEX.md  LINUX_IMAGE_BUILD_PROCESS.md  QD_STEPPER.md  QUICKSTART_ADC.md  TROUBLESHOOTING.md  UMBILICAL.md  WEBSOCKET_API.md  WIFI_SETUP.md
fill-station/fillstation_binaries/: test_adc.cpp
fill-station/fillstation_binaries/lib/: ads1015_driver.hpp  i2cSensor.cpp  i2c_sensor.hpp
fill-station/include/: command_service.hpp  hardware.hpp  igniter.hpp
fill-station/linux/: build-fit-image.nix  default.nix  fit.nix  fitImage.its  kernel.config  kernel.its  mixos-fit-image.nix  mixosConfiguration.nix
fill-station/logs/: tracing.log.2025-11-23-06  tracing.log.2025-11-23-07  tracing.log.2025-11-23-08  tracing.log.2025-11-24-05  tracing.log.2025-11-24-06  tracing.log.2025-12-03-21
fill-station/src/: command.rs  command_service.cpp  csv_logger.rs  hardware.cpp  hardware.rs  igniter.cpp  lib.rs  main.cpp  main.rs  mqtt_publisher.rs
fill-station/src/components/: ads1015.rs  ball_valve.rs  igniter.rs  mav.rs  mod.rs  qd_stepper.rs  solenoid_valve.rs  umbilical.rs
fill-station/uboot/: README.md  default.nix  flake.nix  optee.nix  sd-image.nix  tfa.nix  ti-linux-firmware.nix  uEnv.txt  uboot-a53.nix  uboot-r5.nix
fsw/: Cargo.toml  FSW_REFERENCE.md  README.md  UMBILICAL_FEATURES.md  build.rs  clippy_output.txt  hardware_testing_guide.md  memory.x  test_ssa.uf2  testing_guide.md  umbilical_documentation.md
fsw/.cargo/: config.toml
fsw/Test/: flight_sim.rs
fsw/src/: actuator.rs  airbrake_task.rs  constants.rs  flight.rs  flight_loop.rs  main.rs  module.rs  packet.rs  sensor.rs  state.rs  telem.rs  umbilical.rs  watchdog.rs
fsw/src/driver/: ads1015.rs  ak09915.rs  bmp390.rs  fram.rs  icm42688.rs  lsm6dsox.rs  main_fram.rs  mmc5603nj.rs  mmc56x3.rs  mod.rs  onboard_flash.rs  rfd900x.rs  ublox_max_m10s.rs  winbond_flash.rs
fsw/src/drivers/: bmp390.rs  mod.rs
fsw/tools/: dump_flash.bat
fsw/tools/dump_flash/: Cargo.toml  fsw_20260316_190623.csv
fsw/tools/dump_flash/.cargo/: config.toml
fsw/tools/dump_flash/src/: main.rs
ground-station/: compose-test.yml  compose.yml  create-telemetry-table.sql  emqx_action.sql  emqx_rule.sql  go2rtc.yaml  grafana.json  mqtt_simulator.py  wipe_database.py
ground-station/LaunchButton/: pc_listener.py
ground-station/LaunchButton/pico_rust/: Cargo.toml
ground-station/LaunchButton/pico_rust/.cargo/: config.toml
ground-station/LaunchButton/pico_rust/src/: main.rs
nix/dev-shells/: default.nix
nix/formatter/: default.nix
nix/legacy-packages/: default.nix
nix/mixos-configurations/: default.nix
nix/overlays/: bash-fix.nix  crt.nix  default.nix  fixes.nix
tools/: heartbeat_dashboard.py  umbilical_test.py
(+67 files in other folders)
