[package]
name = "blims"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.0"
fixed = "1.23"
defmt = "0.3"
defmt-rtt = "0.4"
libm = "0.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }





