[package]
name = "fsw"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core runtime and HAL
cortex-m = "0.7.7"
cortex-m-rt = "0.7.0"
rp-hal = { package = "rp235x-hal", version = "0.3.0", features = ["critical-section-impl"] }
embedded-hal = "1.0.0"

# Sensors
# Using custom BMP390 driver (blocking I2C)

# Utilities
libm = "0.2.15"
fugit = "0.3.7"

# Panic handler
panic-halt = "1.0.0"
critical-section = "1.2.0"
