[package]
name = "fsw"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "time-driver", "critical-section-impl", "rp235xa"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0"
embedded-hal-async = "1.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
log = "0.4"
static_cell = "2"
bmp390 = "0.2"
uom = { version = "0.36", default-features = false, features = ["f32", "si"] }
ublox = { version = "0.4", default-features = false }
heapless = "0.8"
embedded-hal-bus = { version = "0.2", features = ["async"] }

[profile.release]
debug = 2
