[package]
name = "fsw"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "time-driver", "critical-section-impl", "rp235xb"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0"
embedded-hal-async = "1.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
log = "0.4"
static_cell = "2"
uom = { version = "0.36", default-features = false, features = ["f32", "si"] }
ublox = { version = "0.4", default-features = false }
heapless = "0.8"
embedded-hal-bus = { version = "0.2", features = ["async"] }
bmp390-rs = { version = "0.4.0", features = ["uom"] }
libm = "0.2.16"
controller_in_rust = { path = "../air-brake-controls/controller_in_rust_v2", default-features = false }
blims = { path = "../BLIMS", default-features = false }

[features]
default = []
test_mav = []
test_sv = []
test_ssa = []
test_sensors = []
test_radio_tx = []
test_radio_rx = []
test_buzzer = []
test_flash = []
test_payload_uart = []
test_airbrakes = []
test_watchdog = []
sim_simple = []
sim_fault = []
sim_stability = []
sim_extra = []
sim_real_flight = []
sim_blims = []
sim_flash = []
sim_launch = []
sim_payload = []
sim_all = ["sim_simple", "sim_fault", "sim_stability", "sim_extra", "sim_flash", "sim_real_flight", "sim_blims", "sim_launch", "sim_payload"]
test_hw_all = ["test_mav", "test_sv", "test_ssa", "test_sensors", "test_radio_tx", "test_buzzer", "test_flash", "test_payload_uart"]
test_all = ["test_hw_all", "sim_all"]
