[package]
name = "controller_in_rust"
version = "0.1.0"
edition = "2021"

# When used as a library dependency from FSW (embedded, no_std), disable the
# "std" feature so that csv/rand/rand_distr are not compiled.
# The simulation binary (main.rs) still works normally on the host with std.
[features]
default = ["std"]
std = ["csv", "rand", "rand_distr"]

[dependencies]
# Always available — work in both std and no_std environments
heapless = { version = "0.8", default-features = false }
libm     = { version = "0.2", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

# Only pulled in when the "std" feature is active (host simulation binary)
csv      = { version = "1.3", optional = true }
rand     = { version = "0.8", optional = true }
rand_distr = { version = "0.4", optional = true }
